@@ -4,11 +4,11 @@
 
 =head1 NAME
 
-Date::Holidays::GB - Determine British holidays - Current UK public and bank holiday dates up to 2019
+Date::Holidays::GB - Determine British holidays - Current UK public and bank holiday dates up to 2021
 
 =head1 SYNOPSIS
 
-    use Date::Holidays::GB qw/ holidays is_holiday /;
+    use Date::Holidays::GB qw/ holidays is_holiday next_holiday /;
 
     # All UK holidays
     my $holidays = holidays( year => 2013 );
@@ -22,6 +22,16 @@ Date::Holidays::GB - Determine British holidays - Current UK public and bank hol
     ) {
         print "No work today!";
     }
+
+    # simpler "date" parameter (from v0.014)
+    if ( is_holiday( date => '2013-12-25' ) ) {
+        print "No work today!";
+    }
+
+    # returns hashref of next holiday dates for regions (default all regions,
+    # individually and together)
+    my $next_holiday = next_holiday();
+    my $next_holiday = next_holiday( 'EAW', 'NIR' );
 
 =head1 DESCRIPTION
 
@@ -38,8 +48,8 @@ L<Date::Holidays::GB::SCT>.
 
 =head1 EXPORTS
 
-Exports C<holidays> and C<is_holiday> on demand. Also can export the aliases
-C<gb_holidays> and C<is_gb_holiday>.
+Exports C<holidays>, C<is_holiday>, C<next_holiday> on demand.
+Also can export the aliases C<gb_holidays> and C<is_gb_holiday>.
 
 =head1 METHODS
 
@@ -54,7 +64,7 @@ The argument list should be in the following order: year, month, day, and
 (optionally) regions.
 
 Note that you will need to specify region(s) to make correct use of this
-module!
+module - Bank Holidays are not the same throughout the UK!
 
 =head2 holidays
 
@@ -81,12 +91,27 @@ Date keys are in the format MMDD, as per the behaviour of L<Date::Holidays>.
 
 or
 
+    # date in YYYY-MM-DD format
+    # ( date => ..., [ regions => \@. .. ] )
+    my $holiday = Date::Holidays::GB->is_holiday( %args );
+
+or
+
     # ( year => ..., month => ..., day => ..., [ regions => \@. .. ] )
     my $holiday = Date::Holidays::GB->is_holiday( %args );
 
 Returns the holiday details (as per C<holidays>) but for a single date.
 Returns false if the specified date is not a holiday in the appropriate
 region(s).
+
+=head2 next_holiday
+
+    my $next_holiday = Date::Holidays::GB->next_holiday( @regions );
+
+Returns the holiday details for the next holiday in the specified regions.
+If no regions are specified, returns the next holiday dates for all regions.
+
+The C<all> key in the results is the next holiday observed by all regions.
 
 =head2 date_generated
 
@@ -174,7 +199,7 @@ Michael Jemmeson <mjemmeson@cpan.org>
 
 =head1 COPYRIGHT
 
-This software is copyright (c) 2013-2018 by Michael Jemmeson.
+This software is copyright (c) 2013-2020 by Michael Jemmeson.
 
 =head1 LICENSE
 
