@@ -2,6 +2,13 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ [Update]
+ - documented next_holiday() method
+ - added more logical 'date' interface to functions
+
+ [Maintenance]
+ - corrected date in abstract
+
 0.013  2020-02-12 13:17:35 GMT
 
  [Update]
